--- a/src/components/Tutorial/Tutorial.css
+++ b/src/components/Tutorial/Tutorial.css
@@ -1,6 +1,7 @@
-.container{
+#container{
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .content-instructions{
@@ -32,7 +33,6 @@
   margin-top: 30px;
   margin-left: 12rem;
 }
-
 
 
 
