--- a/src/components/Navbar/Style.css
+++ b/src/components/Navbar/Style.css
@@ -1,6 +1,23 @@
 #container{
     width: 100%;
+    
 
+
+}
+
+
+#container .content{
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 10rem;
+    padding-right: 10rem;
+}
+
+
+#container img{
+    width: 4rem;
 }
 
 h1{
