--- a/src/components/Tutorial/Tutorial.css
+++ b/src/components/Tutorial/Tutorial.css
@@ -1,81 +1,85 @@
-#container{
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+#container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
-
-
 
 .content-instructions{
-    margin-top: 40px;
-    margin-left: 12rem;
-    width: 100%;
+  margin-top: 40px;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.content-instructions img{
-    width: 2rem;
+.instructions {
+  display: flex;
+  justify-content: baseline;
+  align-items: start;
+  flex-direction: column;
 }
 
-.title{
-    font-weight: bold;
+.content-instructions img {
+  width: 2rem;
 }
 
-.instructions li{
-    margin-top: 8px;
+.title {
+  font-weight: bold;
 }
 
-.instructions a{
-    color: blueviolet;
+.instructions li {
+  margin-top: 8px;
 }
 
-.instructions li:first-child{
-    margin-top: 30px;
+.instructions a {
+  color: blueviolet;
 }
-.content-example{
-  width: 100%;
+
+.instructions li:first-child {
   margin-top: 30px;
-  margin-left: 12rem;
 }
 
-
+.content-example {
+  margin-top: 30px;
+  margin-left: 5rem;
+}
 
 .swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-  
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .swiper-pagination-bullet {
-    width: 20px;
-    height: 20px;
-    text-align: center;
-    line-height: 20px;
-    font-size: 12px;
-    color: #000;
-    opacity: 1;
-    background: rgba(0, 0, 0, 0.2);
-  }
-  
-  .swiper-pagination-bullet-active {
-    color: #fff;
-    background: #007aff;
-  }
-  
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.swiper-pagination-bullet {
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #000;
+  opacity: 1;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.swiper-pagination-bullet-active {
+  color: #fff;
+  background: #007aff;
+}
