--- a/src/components/Tutorial/Tutorial.css
+++ b/src/components/Tutorial/Tutorial.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  padding: 0.8rem 0;
 }
 
 .content-instructions{
@@ -24,6 +25,10 @@
   width: 2rem;
 }
 
+.container-button img{
+  color: white;
+}
+
 .title {
   font-weight: bold;
 }
@@ -40,9 +45,15 @@
   margin-top: 30px;
 }
 
-.content-example {
+#container .content-example {
+  width: 800px;
   margin-top: 30px;
   margin-left: 5rem;
+  background-color: red;
+}
+
+.mySwiper{
+  width: 100%;
 }
 
 .swiper {
