--- a/src/components/Navbar/Style.css
+++ b/src/components/Navbar/Style.css
@@ -13,6 +13,20 @@
     width: 15px;
 }
 
+#container-nav .navigation{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8rem;
+}
+
+
+#container-nav .dashboard-button{
+    background-color:#f2ebeb;
+    padding: 10px;
+    border-radius: 8px;
+}
+
 #container-nav .container-button{
     width: 40px;
     height: 40px;
