--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,7 +1,8 @@
 #container-footer{
   width: 100%;
-  position: fixed;
+  position: absolute;
   bottom: 0;
+  left: 0;
   padding: 0 8rem;
   height: 80px;
 }
