--- a/src/pages/Presentation/styles.css
+++ b/src/pages/Presentation/styles.css
@@ -1,47 +1,81 @@
-#container-presentation {
-  height: 100vh;
+* {
+  width: 100%;
 }
 
-
-html,
-body {
-  position: relative;
-  height: 100%;
-}
-
-body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
+html, body, #container-apresentation {
   margin: 0;
   padding: 0;
 }
 
-.swiper {
-  width: 100%;
+
+body {
+  font-family: Verdana, sans-serif;
   height: 100%;
+  overflow: hidden;
+  background-color: #ffffff;
+
+  margin: 0;
+  padding: 0;
 }
 
-iframe{
+#container-apresentation {
+  height: 100vh;
   width: 100%;
-  height: 100%;
+  overflow: hidden;
+
+ 
 }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.mySlides {
+  display: none;
 }
 
-.swiper-slide img {
-  display: block;
+iframe {
+  vertical-align: center;
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 100vh;
+  border: none;
+
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
 }
+
+.ajuste {
+  margin-top: 20px;
+  margin-left: -8px;
+  width: 102% !important;
+  height: 110vh !important;
+  border: none;
+  overflow: hidden;
+}
+
+#container-apresentation {
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+
+
+.custom-slide {
+  margin-left: 15px;
+  width: 100% !important;
+  height: 100% !important;
+}
+
+#presentation2.custom-slide {
+  margin-left: 0; 
+}
+
+@media screen and (display-mode: fullscreen) {
+  #container-apresentation {
+    width: 100vw;
+    height: 100vh;
+  }
+}
+
+
+
