--- a/src/pages/Dashboards/styles.css
+++ b/src/pages/Dashboards/styles.css
@@ -2,13 +2,17 @@
 #container{
   display: flex;
 }
+
 #container-dashboards{
   margin-top: 40px;
   display: grid;
   place-items: center;
+  place-content: center;
   grid-template-columns: auto auto auto;
   gap: 2rem;
+  text-align: center;
 }
+
 
 #container-dashboards .container-cards{
   width: 300px;
