--- a/src/pages/Presentation/styles.css
+++ b/src/pages/Presentation/styles.css
@@ -28,17 +28,13 @@ iframe {
   height: 100vh;
   border: none;
 
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
 }
 
 .ajuste {
-  margin-top: 20px;
+  margin: 0;
   margin-left: -8px;
   width: 102% !important;
   height: 110vh !important;
-  border: none;
   overflow: hidden;
 }
 
