--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,14 @@
     
 }
 
-body{
-    background-color: #ffff;
-}
 
+body {
+    font-family: Verdana, sans-serif;
+    height: 100%;
+    overflow: hidden;
+    background-color: #ffffff;
+  
+    margin: 0;
+    padding: 0;
+  }
 
