--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,11 +1,11 @@
-#container-footer{
+ #container-footer{
   width: 100%;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  padding: 0 8rem;
+ 
+  
+  margin-top: 40px;
+  padding: 0 12rem;
   height: 80px;
-}
+} 
 
 
 #container span{
