--- a/src/components/Tutorial/Tutorial.css
+++ b/src/components/Tutorial/Tutorial.css
@@ -1,7 +1,10 @@
+
+
 #container {
   display: flex;
   flex-direction: column;
   width: 100%;
+  height: 100%;
   padding: 0.8rem 0;
   margin-bottom: 0;
 }
