ajustando height das paginas

--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,10 @@ body{
     background-color: #ffff;
 }
 
+#root{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    height: 100%;
+}
 
