--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,8 +1,9 @@
  #container-footer{
   width: 100%;
- 
-  
-  margin-top: 40px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  margin-top: 80px;
   padding: 0 12rem;
   height: 80px;
 } 
